[gd_scene load_steps=16 format=1]

[ext_resource path="res://scripts/boss_gate.gd" type="Script" id=1]
[ext_resource path="res://assets/boss_gate.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 5, 32 )

[sub_resource type="Animation" id=2]

resource/name = "hit_1"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "_shake_screen"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [ "inter_wall_before_slide" ],
"method": "play_event"
} ]
}

[sub_resource type="Animation" id=3]

resource/name = "hit_2"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "_shake_screen"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [ "inter_wall_before_slide" ],
"method": "play_event"
} ]
}

[sub_resource type="Animation" id=4]

resource/name = "hit_3"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": ""
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"values": [ {
"args": [ "inter_wall_before_slide" ],
"method": "play_event"
}, {
"args": [ "env_hit_rock_wall" ],
"method": "play_event"
} ]
}

[sub_resource type="Animation" id=5]

resource/name = "hit_4"
length = 0.4
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [ 0.5 ],
"method": "_shake_screen"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("rock_pieces:collision/layers")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("rock_pieces:collision/mask")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:collision/layers")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:collision/mask")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 0.05, 0.15, 0.2 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"values": [ {
"args": [ "inter_wall_before_slide" ],
"method": "play_event"
}, {
"args": [ "env_hit_rock_wall" ],
"method": "play_event"
}, {
"args": [ "inter_wall_before_slide" ],
"method": "play_event"
}, {
"args": [ "env_hit_rock_wall" ],
"method": "play_event"
} ]
}

[sub_resource type="Animation" id=6]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:collision/layers")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 524291 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:collision/mask")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 524291 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("rock_pieces:collision/layers")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("rock_pieces:collision/mask")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 7, 48 )

[sub_resource type="ConvexPolygonShape2D" id=8]

custom_solver_bias = 0.0
points = Vector2Array( 20, 10, 20, -1, 52, -1, 53, 3, 53, 35, 41, 35 )

[sub_resource type="ConvexPolygonShape2D" id=9]

custom_solver_bias = 0.0
points = Vector2Array( 19, 36, 19, 12, 20, 10, 41, 35, 38, 36 )

[sub_resource type="ConvexPolygonShape2D" id=10]

custom_solver_bias = 0.0
points = Vector2Array( 24, 57, 43, 48, 54, 51, 66, 66, 53, 75, 37, 72 )

[sub_resource type="ConvexPolygonShape2D" id=11]

custom_solver_bias = 0.0
points = Vector2Array( 41, -19, 55, -28, 59, -22, 43, -15 )

[sub_resource type="ConvexPolygonShape2D" id=12]

custom_solver_bias = 0.0
points = Vector2Array( 58, 2, 58, -1, 65, -7, 70, -7, 72, -3, 67, 1 )

[sub_resource type="ConvexPolygonShape2D" id=13]

custom_solver_bias = 0.0
points = Vector2Array( 79, -48, 96, 11, 78, 83, 8, 75, 9, -45 )

[node name="boss_gate" type="StaticBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 5, 31 )
shapes/0/trigger = false
collision/layers = 0
collision/mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 0, 63 )
texture = ExtResource( 2 )
offset = Vector2( 33, -46 )
vframes = 3
hframes = 4
frame = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 5, 31 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/hit_1 = SubResource( 2 )
anims/hit_2 = SubResource( 3 )
anims/hit_3 = SubResource( 4 )
anims/hit_4 = SubResource( 5 )
anims/none = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "none"

[node name="hit" type="Area2D" parent="."]

visibility/visible = false
transform/pos = Vector2( -5, 63 )
input/pickable = true
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 8, -48 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit"]

transform/pos = Vector2( 8, -48 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="rock_pieces" type="StaticBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 9 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 10 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 11 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 12 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/4/trigger = false
collision/layers = 3
collision/mask = 3
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="rock_pieces"]

build_mode = 0
polygon = Vector2Array( 20, -1, 52, -1, 53, 3, 53, 35, 41, 35, 38, 36, 19, 36, 19, 12, 20, 10 )
shape_range = Vector2( 0, 1 )
trigger = false

[node name="CollisionPolygon2D 2" type="CollisionPolygon2D" parent="rock_pieces"]

build_mode = 0
polygon = Vector2Array( 24, 57, 43, 48, 54, 51, 66, 66, 53, 75, 37, 72 )
shape_range = Vector2( 2, 2 )
trigger = false

[node name="CollisionPolygon2D 3" type="CollisionPolygon2D" parent="rock_pieces"]

build_mode = 0
polygon = Vector2Array( 41, -19, 55, -28, 59, -22, 43, -15 )
shape_range = Vector2( 3, 3 )
trigger = false

[node name="CollisionPolygon2D 4" type="CollisionPolygon2D" parent="rock_pieces"]

build_mode = 0
polygon = Vector2Array( 58, 2, 58, -1, 65, -7, 70, -7, 72, -3, 67, 1 )
shape_range = Vector2( 4, 4 )
trigger = false

[node name="cross_game" type="Area2D" parent="."]

visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 13 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="cross_game"]

build_mode = 0
polygon = Vector2Array( 9, -45, 8, 75, 78, 83, 96, 11, 79, -48 )
shape_range = Vector2( 0, 0 )
trigger = false

[connection signal="finished" from="anim" to="." method="_on_anim_finished"]

[connection signal="area_enter" from="hit" to="." method="_on_hit_area_enter"]

[connection signal="body_enter" from="cross_game" to="." method="_on_cross_game_body_enter"]


